[metadata]
name = mario-py 
version = 0.0.1
author = Shuxiao Chen, Bokai Zhu 
author_email = shuxiaoc@wharton.upenn.edu, bkzhu@stanford.edu  
description = A package for matching and integrating multi-modal single cell data with partially overlapping features 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shuxiaoc/mario-py
project_urls =
    Bug Tracker = https://github.com/shuxiaoc/mario-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires:
    numpy ==1.20.1
    pandas ==1.2.1
    scipy ==1.6.2
    scikit-learn ==0.23.2

[options.packages.find]
where = src
